test/FAIL/runcmd/memory_match/03_test_run.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="doesn't match the memory map of .text segment"
#-------

load boucle.o
run 0x0
